# uptime_server

./: Cargo.toml  backup_db.sh  debian_install_docker.sh  dump_db.sh  run_server.sh  select_all.sh  select_count_all.sh  select_groupby_timestamp.sh  select_load_test_check.sh  server_install.sh  test_restore_backup.sh
docker/postgres/: Dockerfile  init.sql  query_all.sh  run_postgres.sh
src/: main.rs
